# nifty_graph

./: .travis.yml  CMakeLists.txt  CONTRIBUTING.rst  README.rst
docs/: Doxyfile  environment.yml
docs/source/: .gitignore  conf.py  index.rst  readme.rst
include/nifty/graph/: graph.hpp
include/nifty/graph/graphs/: adjacency_base.hpp  complete_ugraph.hpp  dense_ugraph.hpp  dynamic_ugraph.hpp  graph_base.hpp  ugraph_base.hpp
include/nifty/graph/graphs/building_blocks/: adjacency_element.hpp  graph_tags.hpp
include/nifty/graph/maps/: stl_graph_map_adaptor.hpp
include/nifty/tools/: map_key_iterator.hpp
src/: CMakeLists.txt
src/docs/: CMakeLists.txt
src/docs/doxygen_doc/: Doxyfile.in  Doxyfile_xml.in
src/docs/doxygen_doc/include/: mainpage.dox
src/examples/: example_1.cpp  example_2.cpp
src/tests/: CMakeLists.txt  graph_test.hpp  test_nifty_dynamic_ugraph.cpp  test_nifty_ugraph.cpp
